# EduRemus-Backend

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.local.yml  pyproject.toml
docker/django/: Dockerfile
init/: entrypoint.sh
requirements/: base.txt  development.txt  local.txt
src/config/: urls.py
src/config/settings/: __init__.py
src/config/settings/components/: app.py  base.py  database.py  i8n.py  logging.py  middleware.py  security.py  static_and_media.py  template.py
src/config/settings/environments/: development.py  local.py
src/scripts/: create_fake_superuser.py  create_super_user.py
