[project]
name = "eduremus-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
target_version = ["py312", "py313"]
dependencies = [
    "django==5.2.4",
    "django-jazzmin==3.0.1",
    "django-split-settings==1.3.2",
    "faker==37.4.2",
    "pre-commit==4.2.0",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "django-debug-toolbar==5.2.0",
    "django-extensions==4.1",
    "flake8==7.3.0",
    "ipython==9.4.0",
    "isort==6.0.1",
    "werkzeug==3.1.3",
]
[tool.black]
line-length = 200
target-version = ['py313']
exclude = '''
/(
    migrations
  | __pycache__
  | env
  | .venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]  # Replace with your Django project/module name

